--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,6 @@
 TODO:
 
-1. Create an ECS system
+1. Create an ECS system (probably just going to use Flecs for this)
 2. Add sound support
 3. 3D projection and models maybe?
-4. Make a ga... hey, i'm not spoiling it for you!
+4. Make a ga... hey, I'm not spoiling it for you!
